css/style.css
body{
	background: #4C5759;
	font: 18px/1.5 Helvetica, Arial, sans-serif; 
}	

.hiddenimg{
	color: blue;
	font-family: Century Gothic, sans-serif;
}

.box{
background-color: #0a1517;
}

.header_image{
 float: left;
 float:top;
 height: 100px;
 }
 
 #edge{
	height:100px;
	width: auto;
 }
 
.container {
	background-color: grey;
}

#label{
	font-family: Century Gothic, sans-serif;
}

.icon {
	 width: 60px;
}

.footer {
	height: 30px;
	text-align: center;
	padding-top: 10px;
	margin-top: 20px;
	color: lightblue;
	font-size: 12px;
	background-color: #4C5759;
}

.clearfloat {
	clear: both;
	background-color; #4C5759;
}

*{
	margin: 0; border: 0;
}


#acccontainer{
	float: left;
	float: bottom;
	width: auto;
	height: auto;
	margin: 0 auto;
}

.accordion label{
	display:block;
	background-color: #9C9C9C;
	padding: 0px;
	color: black;
	font-family: Century Gothic, sans-serif;
	cursor: help;
}

.accordion p{
	color: #253635;
	font-size: 0.8em;
	line-height: 1.7em;
	font-family: Century Gothic, sans-serif;
	visibility: hidden;
	opacity: 0;
	display: none;
	text-align: left;
	background-color: #ADADAD;
	padding-left: 70px;
	padding-right: 70px;
}

#tm:checked ~ .hiddenimg{
	display: block;
	visibility: visible;
	opacity: 1;
}

input#tm{
	display: none;
	position: relative;
}

#tn:checked ~ .hiddenimg{
	display: block;
	visibility: visible;
	opacity: 1;
}

input#tn{
	display: none;
	position: relative;
}

#to:checked ~ .hiddenimg{
	display: block;
	visibility: visible;
	opacity: 1;
}

input#to{
	display: none;
	position: relative;
}

#tp:checked ~ .hiddenimg{
	display: block;
	visibility: visible;
	opacity: 1;
}

input#tp{
	display: none;
	position: relative;
}

